# rocket-http-server

./: .env  Cargo.toml  Rocket.toml
.github/workflows/: rust.yml
migrations/: 0001_create_tasks_table.sql
src/: main.rs
