[package]
name = "rocket-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["sqlite", "macros", "migrate", "chrono" ] }
serde = "1.0"
